<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@color/app_color_primary"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_toolbar"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="Aplikasi Perhitungan Gaji"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_action_bar"
            android:background="@color/black" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/light_grey"
            android:layout_marginHorizontal="12dp"
            app:cardCornerRadius="8dp"
            android:elevation="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tv_your_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_input_your_name"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <EditText
                android:id="@+id/et_your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_name"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="Isikan Nama Lengkap Anda"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tv_your_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/et_your_name"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_status"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <CheckBox
                android:id="@+id/cb_married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_status"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_married"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tv_your_gol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_married"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/text_golongan"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

            <RadioGroup
                android:id="@+id/rg_Golongan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_your_gol"
                android:orientation="horizontal"
                android:layout_marginStart="10dp">

                <RadioButton
                    android:id="@+id/rb_Golongan1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/text_golongan_1"
                    android:textSize="16sp"/>

                <RadioButton
                    android:id="@+id/rb_Golongan2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_golongan_2"
                    android:textSize="16sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/teal_700"
                app:layout_constraintTop_toBottomOf="@+id/rg_Golongan"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="calculate"
                android:text="@string/text_calculate_salary"
                android:textSize="16sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="12dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_1"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/light_grey"
        android:layout_marginHorizontal="12dp"
        app:cardCornerRadius="8dp"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/tv_calculate_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_calculate"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/ll_output_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_calculate_result"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_output_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_name"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_output_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_output_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_output_name"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/tv_output_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Status: "
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_output_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_output_golongan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_output_status"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/tv_output_golongan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gol"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_output_golongan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_output_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_output_golongan"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp">

                <TextView
                    android:id="@+id/tv_output_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_your_total_salary"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_output_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>